--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^6.1.0",
     "react": "16.8.3",
     "react-native": "0.59.8"
   },
@@ -17,7 +18,8 @@
     "babel-jest": "24.8.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.1",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
