--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.19.0",
     "firebase": "^6.1.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
