--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^6.1.0",
+    "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-router-flux": "^4.0.6",
